# Elastic-Non-Uniform-FFT

./: .gitignore  .gitmodules  CITATION.cff  Code_Alps.py  Code_Alps_Preprocess.py  Code_Ems.py  Code_Mono.py  Code_Mountain.py  Code_Nufft.py  Module_Alps.py  Module_Csa.py  Module_Csv.py  Module_Ems.py  Module_Helpers.py  Module_Nufft.py  Module_Orography.py  Module_Plot_Template.py  NOTICE  Plot_Alps.py  Plot_Ems.py  Plot_Mono.py  Plot_Mountain.py  Plot_Nufft.py  README.md  Run_Alps_Levante.sh  SECURITY.md  readme_code.md  readme_modules.md  readme_plot.md
package/: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml
package/docs/: API.md
package/examples/: polygon_enufft_demo.py
package/proof/figures/: proof_summary.txt
package/scripts/: make_proof_plots.py
package/src/enufft/: __init__.py  analysis.py  ems.py  geometry.py  nufft.py  plotting.py  synthetic.py
package/tests/: test_analysis.py  test_ems.py  test_geometry.py  test_nufft.py  test_public_api.py
