[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enufft"
version = "0.1.0"
description = "Elastic non-uniform FFT and elastic mode selection for polygonal terrain windows."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "Tridib Banerjee" }
]
keywords = ["nufft", "fourier", "terrain", "orography", "spectral-analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0"
]
plots = [
  "matplotlib>=3.7"
]

[project.urls]
Homepage = "https://github.com/TridibBanerjee/Elastic-Non-Uniform-FFT"
Source = "https://github.com/TridibBanerjee/Elastic-Non-Uniform-FFT"
Issues = "https://github.com/TridibBanerjee/Elastic-Non-Uniform-FFT/issues"
DOI = "https://doi.org/10.5281/zenodo.20544458"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
